<resources>
    <string name="app_name">Syde</string>
    <string name="login_txt">Revolutionising&#160;your&#160;practice</string>
    <string name="login_btn">Sign In</string>
    <string name="set_pwd">Set Password</string>
    <string name="forgot_txt">Forgot password?</string>
    <string name="forgot">Forgot Password</string>
    <string name="pswd">Password</string>
    <string name="remember_btn">&#160;Remember me</string>
    <string name="email_hint">Email address</string>
    <string name="mail_hint">Send to ...</string>
    <string name="pswd_hint">Password</string>
    <string name="email">Email Address</string>
    <string name="forgot_btn_txt">Send Me Reset Password Instructions</string>
    <string name="default_email">abc@gmail.com</string>
    <string name="condition">Conditions</string>
    <string name="screenshare">Screenshare</string>
    <string name="media">Media</string>
    <string name="email_label">Email</string>
    <string name="basic">Basic Details</string>
    <string name="user">User Name</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="play_list">ENTERTAINMENT</string>
    <string name="sett">Settings</string>
    <string name="sett_user_name">Username</string>
    <string name="sett_user_email">gerrettperry@gmail.com</string>
    <string name="signout">Sign Out</string>
    <string name="send">SEND EMAIL</string>
    <string name="chng_pswd">Change Password</string>
    <string name="other_setting">Other Settings</string>
    <string name="new_pswd">New Password</string>
    <string name="cnfrm_pswd">Confirm Password</string>
    <string name="forgot_pswd_msg">You will receive an email with instructions on how to reset your password in a few minutes</string>
    <string name="no_internet">No internet connection. Please check your network connection and try again</string>



    <string name="no_api_hit">There seems to be an issue. Please contact the admin.</string>
    <string name="no_internet_speed">You are offline. Please check your internet connection.</string>



    <string name="capture">The screen share is not active at the moment. Please wait for the screen share to start</string>
    <string name="no_email">Email not found</string>
    <string name="req">Required</string>
    <string name="email_valid">Please enter a valid email address</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="pswd_not_match">Password and confirm password does not match.</string>
    <string name="treatmnt">TREATMENT OPTIONS</string>
    <string name="wrong">Something went wrong</string>
    <string name="error_code">Email has already been taken</string>
    <string name="wrong_pswd">Your current password is wrong. Please enter the correct password</string>
    <string name="pswd_update">Your password has been updated successfully</string>
    <string name="pswd_valid">Password must contain eight characters including one number</string>
    <string name="no_condtion">No presentations are present in a surgery</string>
    <string name="no_playlist">You seem to be offline. \nPlease Check Your Internet Connection.</string>
    <string name="no_treatment"> No treatment associated with this presentation</string>
    <string name="no_condition_video">No education videos and images are available for this condition</string>
    <string name="mixpanel_id">acb38e66dc217ed68433913c193f0c7d</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="choose_image">Choose an image for edit</string>
    <string name="edit_image">edit image</string>
    <string name="save_path">save path : %s</string>
    <string name="take_photo">take_photo</string>
    <string name="permission_title_rationale">Permission required</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="more">More</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify the app permissions</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="setting">Settings</string>
    <string name="buttonText">Click to begin please</string>
    <string name="share_start">"Waiting for the desktop to start screen sharing with your device"</string>
    <string name="share_error">The desktop has stopped screen sharing with your device. We are waiting to reconnect. Press "Back" to go to the previous screen</string>
    <string name="mail_txt">Thank you for visiting Sunninghill Dental Practice today. Your dental health is important to\nus, so we thought we\'d send you a breakdown of the conditions we discussed and\nsome tips on how to improve, prevent and maintain your oral health.</string>
    <string name="mail_edit_hint">Additional advice here &#8230;</string>
    <string name="prevention_advice_hint">Prevention advice here &#8230;</string>
    <string name="prevention_advice_video">Prevention advice </string>
    <string name="sub_heading_hint">Subheading here &#8230;</string>
    <string name="email_condition_error">Please select a condition first</string>
    <string name="email_treatment_error">Please select a treatment option</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_screenshot">Images related to what we discussed today</string>
    <string name="screenshot">SELECT SCREENSHOTS</string>
    <string name="screenshot_error">No screenshot found!</string>
    <string name="maximum_items_error">You can select a maximum of 4 treatment options</string>
    <string name="maximum_items_error_screenshot">You can select a maximum of 4 screenshots</string>
    <string name="drag_here">Drag screenshots here from the top &#8230;</string>
    <string name="invalid_pswd">Invalid password</string>
    <string name="no_playlist_found">No playlist found</string>
    <string name="no_condition_found">No condition found</string>
    <string name="choose">Please select at least one treatment option</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="create_email_header">Your dental health is important to us, so we thought we\'d send you a breakdown of the conditions we discussed and some tips on how to improve, prevent and maintain your oral health.​</string>
    <string name="screenshare_instruction">Enable screenshare from your computer\nto easily share images with your patients</string>
    <string name="fa_icon_areachart">&#xf1fe;</string>
    <string name="icon_undo">&#xf0e2;</string>
    <string name="ic_tick">&#xf00c;</string>
    <string name="ic_back">&#xf060;</string>
    <string name="ic_upload">&#xf062;</string>
    <string name="ic_paint">&#xf1fc;</string>
    <string name="ic_cross">&#xf00d;</string>
    <string name="ic_down">&#xf107;</string>
    <string name="ic_edit">&#xf303;</string>
    <string name="ic_plus">&#xf067;</string>
    <string name="ic_minus">&#xf068;</string>
    <string name="ic_volume">&#xf028;</string>
    <string name="ic_unmute">&#xf028;</string>
    <string name="ic_bottom_arrow">&#xf063;</string>
    <string name="forward_arrow">&#xf061;</string>
    <string name="ic_arrow_up">&#xf062;</string>
    <string name="user_icon">&#xf007;</string>
    <string name="user_arrow">&#xf061;</string>
    <string name="ic_screenshare">&#xf108;</string>
    <string name="ic_earphones">&#xf025;</string>
    <string name="ic_conditions">&#xf5c9;</string>
    <string name="ic_back_round">&#xf0a8;</string>
    <string name="ic_email">&#xf0e0;</string>
    <string name="ic_treatment">&#xf48e;</string>
    <string name="ic_mute">&#xf2e2;</string>
    <string name="ic_zoom_out">&#xf065;</string>
    <string name="ic_zoom_in">&#xf066;</string>
    <string name="ic_info">&#xf05a;</string>
    <string name="back_awsom">&#xf053;</string>
    <string name="ic_port">&#xf07c;</string>
    <string name="ic_backClick">&#xf177;</string>
    <string name="ic_cross_mark">&#xf057;</string>
    <string name="profile">Profile</string>
    <string name="device">Device</string>
    <string name="about">About</string>
    <string name="Montserrat_regular">Montserrat-Regular.ttf</string>
    <string name="awsom_font_300">Font Awesome 5 Pro-Light-300.otf</string>
    <string name="user_update">Your profile has been updated successfully</string>
    <string name="yahoo">\@yahoo.com</string>
    <string name="outlook">\@outlook.com</string>
    <string name="gmail">\@gmail.com</string>
    <string name="login_back">Login </string>
    <string name="app_version">App Version : 5.2.1</string>
    <string name="title_activity_my_portfolio">MyPortfolio</string>
    <string name="my_channel">my_channel_01</string>
    <string name="channel_description">channel_desc</string>
    <string name="channel_name">channel_name</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="pref_title_stick_container">Stick layer to</string>
    <string name="pref_title_transformer">Transformer</string>
    <string name="pref_title_enable_preview_mode">Enable preview mode</string>
    <string name="pref_title_show_shadow">Show shadow</string>
    <string name="pref_title_show_offset">Closed offset</string>
    <string name="open_button_container">Open</string>
    <string name="close_button_container">Close</string>

    <string name="swipe_label">Swipe!</string>
    <string name="swipe_left_label">Swipe left!</string>
    <string name="swipe_right_label">Swipe right!</string>
    <string name="swipe_up_label">Swipe up!</string>
    <string name="swipe_down_label">Swipe down!</string>

    <string name="label_right">Right</string>
    <string name="label_left">Left</string>
    <string name="label_top">Top</string>
    <string name="label_bottom">Bottom</string>

    <string name="label_none">None</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_rotation">Rotation</string>
    <string name="label_slide_joy">Slide Joy!</string>

    <string name="not_applicable">n/a</string>

    <string-array name="pref_list_titles">
        <item>@string/label_right</item>
        <item>@string/label_left</item>
        <item>@string/label_top</item>
        <item>@string/label_bottom</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>right</item>
        <item>left</item>
        <item>top</item>
        <item>bottom</item>
    </string-array>

    <string-array name="pref_transform_list_titles">
        <item>@string/label_none</item>
        <item>@string/label_alpha</item>
        <item>@string/label_rotation</item>
        <item>@string/label_slide_joy</item>
    </string-array>
    <string-array name="pref_transform_list_values">
        <item>none</item>
        <item>alpha</item>
        <item>rotation</item>
        <item>slide</item>
    </string-array>

    <string name="pref_go">Go!</string>

</resources>
