<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/web_view_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentLeft="true"
            android:max="100"
            android:progressDrawable="@drawable/web_view_demo_progressbar_horizontal" />

    </LinearLayout>


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/audio_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="@dimen/_50sdp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:gravity="center|bottom"
        android:orientation="vertical">


        <Button
            android:id="@+id/youtube_back"
            android:layout_width="@dimen/_31sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/black_circle_layout"
            android:elevation="@dimen/button_shadow"
            android:text="@string/ic_back"
            android:textSize="@dimen/_15sdp" />


        <Button
            android:id="@+id/youtube_vol_high_button"
            android:layout_width="@dimen/_31sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/black_circle_layout"
            android:elevation="@dimen/button_shadow"
            android:text="@string/ic_plus"
            android:textSize="@dimen/_15sdp" />

        <Button
            android:id="@+id/youtube_vol_low_button"
            android:layout_width="@dimen/_31sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/black_circle_layout"
            android:elevation="@dimen/button_shadow"
            android:text="@string/ic_minus"
            android:textSize="@dimen/_15sdp" />

        <Button
            android:id="@+id/youtube_mute_button"
            android:layout_width="@dimen/_31sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/black_circle_layout"
            android:elevation="@dimen/button_shadow"
            android:text="@string/ic_volume"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>


</RelativeLayout>