<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    android:focusableInTouchMode="true"
    tools:context="com.sydehealth.sydehealth.main.Forgot_password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:gravity="center|left">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/back"
                android:gravity="center|left"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/backB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_awsom"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_6sdp"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/forgot"
                    android:id="@+id/forgot_label"
                    android:textColor="@color/gray"
                    />
            </LinearLayout>


        </LinearLayout>
        <com.sydehealth.sydehealth.utility.LockableScrollView
            android:layout_width="match_parent"
            android:id="@+id/forgot_scrollview"
            android:scrollbars="none"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:textColor="@color/white"
                    android:paddingLeft="@dimen/_1sdp"
                    android:textSize="@dimen/_8sdp"
                    android:id="@+id/email_label"
                    />
                <EditText
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/default_email"
                    android:textSize="@dimen/_6sdp"
                    android:textColorHint="@color/light_grey"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:paddingLeft="@dimen/_6sdp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edit_text_back"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditTextTheme"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:id="@+id/email_layer"
                    android:visibility="visible"
                    android:paddingTop="@dimen/_3sdp"
                    android:background="@drawable/white_round_bg"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/EditTextTheme">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_email"
                        style="@style/EditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/email_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions|textEmailAddress"
                        android:nextFocusDown="@+id/pswd"
                        android:paddingLeft="@dimen/_8sdp"
                        android:paddingRight="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="@dimen/_8sdp"/>


                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:text=""
                    android:id="@+id/edit_email_error"
                    android:textColor="@color/yellow"
                    android:gravity="center|right"/>
                <Button
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_23sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textSize="@dimen/_8sdp"
                    android:id="@+id/forgot"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_round_pink_bg"
                    android:text="@string/forgot_btn_txt"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp">
                </LinearLayout>

            </LinearLayout>
        </com.sydehealth.sydehealth.utility.LockableScrollView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/keyboard_extra_key"
            android:orientation="horizontal"
            android:visibility="gone"
            android:gravity="center"
            android:layout_height="@dimen/_20sdp"
            android:background="#DBDDE2">

            <Button
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:textAllCaps="false"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:background="@drawable/rounded_key"
                android:text="@string/yahoo"
                android:id="@+id/yahoo_txt"
                android:gravity="center"
                android:layout_height="@dimen/_17sdp" />
            <Button
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:background="@drawable/rounded_key"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textAllCaps="false"
                android:gravity="center"
                android:id="@+id/outlook_txt"
                android:text="@string/outlook"
                android:layout_height="@dimen/_17sdp" />
            <Button
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:gravity="center"
                android:paddingLeft="@dimen/_5sdp"
                android:background="@drawable/rounded_key"
                android:paddingRight="@dimen/_5sdp"
                android:textAllCaps="false"
                android:id="@+id/gmail_txt"
                android:text="@string/gmail"
                android:layout_height="@dimen/_17sdp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
